# RAG

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/models/: chat.py  document.py
app/services/: agent_service.py  llm_service.py  parser_service.py  vector_service.py
docs/: 部署说明.md  项目概述.md
scripts/: docker-start.sh  start.sh
tests/: test_document_parser.py
